<resources>
    <string name="app_name">Mr. Bross</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name= "ubicaciones">Locations</string>
    <string name= "database">Database</string>
    <string name= "volver">Volver</string>
    <string name="title_activity_map">Ubicaciones</string>
    <string name="title_activity_data_base">Base de datos</string>
    <string name="Buscar_sede">Buscar sede...</string>
    <string name="sede">Sede:</string>
    <string name="n_lat">Nueva lat:</string>
    <string name="n_lon">Nueva lon:</string>
    <string name="lat">latitud:</string>
    <string name="lon">longitud:</string>
    <string name="buscar">BUSCAR</string>
    <string name="current">UBICACIÓN ACTUAL</string>
    <string name="sedes">VER SEDES</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">Splash</string>
    <string name="restaurantes">SEDES</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="actualizar">ACTUALIZAR</string>
    <string name="cargar">CARGAR</string>
    <string name="insertar">INSERTAR</string>
</resources>
